--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "styled-components": "^6.1.8",
+    "swiper": "^11.1.0",
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
